Got figures to knit properly!

--- a/Code/Landman_ENV872_Project.tex
+++ b/Code/Landman_ENV872_Project.tex
@@ -223,13 +223,26 @@ format, with two seperate columns for discharge based on location.
 Exploration}\label{discharge-data-exploration}}
 
 A boxplot was made to visualize the range of discharge at each site
+
+\begin{figure}
+\centering
 \includegraphics{Landman_ENV872_Project_files/figure-latex/Exploratory Analysis Figure 2-1.pdf}
+\caption{Distribution of discharge at two sites, upstream (208675010)
+and downstream (2086849) along Ellerbe Creek from January 1, 2008 to
+April 17, 2020}
+\end{figure}
 
 \newpage
 
 The discharge over time at each location does not show any obvious
 seasonal or annual trends.
+
+\begin{figure}
+\centering
 \includegraphics{Landman_ENV872_Project_files/figure-latex/Exploratory Analysis Figure 3-1.pdf}
+\caption{Daily discharge at along Ellerbe Creek from January 1, 2008 to
+April 17, 2020}
+\end{figure}
 
 \newpage
 
